--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,18 +5,37 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="ESCROW.COM"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
+            android:name=".LoginEscrow"
+            android:label="@string/title_activity_login_escrow"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".TransactionList"
+            android:label="Escrow Transactions"
+            android:parentActivityName=".LoginEscrow"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.escrowwidget.root.escrowtransactreal.LoginEscrow" />
+        </activity>
+        <activity
+            android:name=".TransactionInfo"
+            android:label="@string/title_activity_transaction_info"
+            android:parentActivityName=".TransactionList"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.escrowwidget.root.escrowtransactreal.TransactionList" />
         </activity>
     </application>
 
